--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
   <artifactId>maven-project</artifactId>
   <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
+  <packaging>jar</packaging>
+   <!-- want war package , replace jar with war -->      
   <name>Maven Project</name>
   <description>Sample Maven project with a working, deployable site.</description>
   <url>http://www.example.com</url>
