--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <artifactId>maven-project</artifactId>
   <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <packaging>war</packaging>
    <!-- want war package , replace jar with war -->      
   <name>Maven Project</name>
   <description>Sample Maven project with a working, deployable site.</description>
